--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Aplikacja Taco Cloud</title>
 </head>
 <body>
 <h1>Witaj</h1>
+<h3>Wybierz rodzaj mąki:</h3>
+<div th:each="ingredient : ${wrap}">
+    <input name="ingredients" type="checkbox" th:value="$ingredient.id"/>
+    <span th:text="${ingredent.name}">SKŁADNIK</span><br/>
+</div>
 </body>
 </html>
