--- a/src/main/resources/templates/orderForm.html
+++ b/src/main/resources/templates/orderForm.html
@@ -27,6 +27,34 @@
     <label for="street">Ulica:</label>
     <input type="text" th:field="*{street}"/>
     <br/>
+
+    <label for="city">Miejscowość:</label>
+    <input type="text" th:field="*{city}"/>
+    <br/>
+
+    <label for="state">Województwo:</label>
+    <input type="text" th:field="*{state}"/>
+    <br/>
+
+    <label for="zip">Kod pocztowy:</label>
+    <input type="text" th:field="*{zip}"/>
+    <br/>
+
+    <h3>Sposób płatności...</h3>
+    <label for="ccNumber">Numer karty kredytowej:</label>
+    <input type="text" th:field="*{ccNumber}"/>
+    <br/>
+
+    <label for="ccExpiration">Data ważności:</label>
+    <input type="text" th:field="*{ccExpiration}"/>
+    <br/>
+
+    <label for="ccCVV">Kod CVV:</label>
+    <input type="text" th:field="*{ccCVV}"/>
+    <br/>
+
+    <input type="submit" value="Złóż zamówienie"/>
+
 </form>
 
 </body>
